# entropy_zero

./: .gitignore  Cargo.toml  Makefile  README.md  SIMULATION_GUIDE.md  Trunk.toml  index.html  justfile  spe.md
.cargo/: config.toml
.github/workflows/: deploy-cloudflare.yml
apps/web/: Cargo.toml  Trunk.toml  _headers  _redirects  index.html  simulations.json
apps/web/src/: main.rs
crates/ez_core/: Cargo.toml
crates/ez_core/src/: lib.rs  math.rs  parameters.rs  taxonomy.rs  traits.rs
crates/ez_physics/: Cargo.toml
crates/ez_physics/src/: forces.rs  integrators.rs  lib.rs
crates/ez_renderer/: Cargo.toml
crates/ez_renderer/src/: camera.rs  grid.rs  lib.rs  materials.rs
crates/ez_ui/: Cargo.toml
crates/ez_ui/src/: lib.rs  panels.rs  widgets.rs
docs/: adding_simulations.md  architecture.md  developer_guide.md  workflow_guide_zh.md
simulations/classical_mechanics/: Cargo.toml
simulations/classical_mechanics/src/: lib.rs  particle_system.rs
simulations/wave_physics/: Cargo.toml
simulations/wave_physics/src/: lib.rs
simulations/wave_physics/src/binary_spiral/: components.rs  mod.rs  resources.rs  systems.rs  ui.rs
simulations/wave_physics/src/ripple_tank/: components.rs  mod.rs  physics.rs  resources.rs  spawn.rs  ui.rs
src/: main.rs
src/components/: mod.rs  particle.rs
src/plugins/: hello_world.rs  mod.rs  particle_plugin.rs
src/resources/: mod.rs  simulation.rs
src/systems/: mod.rs  particle_systems.rs  ui_systems.rs
