[package]
name = "entropy_zero"
version = "0.1.0"
edition = "2021"
description = "Strategy Iron Logic - High-performance simulation core"
license = "MIT"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_ui",
    "png",
    "x11",
    "webgl2",
    "tonemapping_luts",
] }
bevy_egui = "0.28"
log = "0.4"
wasm-bindgen = "0.2"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
