[workspace]
resolver = "2"
members = [
    "crates/ez_core",
    "crates/ez_renderer",
    "crates/ez_ui",
    "crates/ez_physics",
    "simulations/classical_mechanics",
    "simulations/wave_physics",
    "apps/web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/physicsfamily/entropy_zero"

[workspace.dependencies]
# Core dependencies
bevy = { version = "0.14", default-features = false }
bevy_egui = { version = "0.28", default-features = false, features = ["default_fonts", "render"] }
log = "0.4"
wasm-bindgen = "0.2"
rand = "0.8"

# Math and physics
nalgebra = "0.33"

# Internal crates
ez_core = { path = "crates/ez_core" }
ez_renderer = { path = "crates/ez_renderer" }
ez_ui = { path = "crates/ez_ui" }
ez_physics = { path = "crates/ez_physics" }
classical_mechanics = { path = "simulations/classical_mechanics" }
wave_physics = { path = "simulations/wave_physics" }



[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
