[package]
name = "entropy_zero_web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web application for Entropy Zero simulation platform"

[dependencies]
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_ui",
    "png",
    "webgl2",
    "tonemapping_luts",
    "trace",
] }
bevy_egui.workspace = true
ez_core.workspace = true
ez_renderer.workspace = true
ez_ui.workspace = true
classical_mechanics.workspace = true
log.workspace = true
wasm-bindgen.workspace = true

# WASM debugging - maps Rust panics to browser console
console_error_panic_hook = "0.1"
# WASM logging - maps log macros to browser console  
console_log = "1.0"
# Random number generation for WASM
getrandom = { version = "0.3", features = ["wasm_js"] }
# UUID generation for WASM
uuid = { version = "1.10", features = ["v4", "js"] }
