[package]
name = "ez_renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared rendering infrastructure for Entropy Zero simulations"

[dependencies]
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
] }
ez_core.workspace = true
log.workspace = true
