[package]
name = "ez_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared UI components for Entropy Zero simulations"

[dependencies]
bevy = { workspace = true, features = ["bevy_ui"] }
bevy_egui.workspace = true
ez_core.workspace = true
log.workspace = true
